@@ -2,11 +2,11 @@
 # Contributor: Hussam Al-Tayeb <ht990332@gmail.com>
 
 pkgname=openoffice-base-devel
-pkgver=3.1_dev300_m33
-pkgrel=2
+pkgver=3.1_dev300_m34
+pkgrel=1
 pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite"
 arch=('i686' 'x86_64')
-_OO_milestone=DEV300_m33
+_OO_milestone=DEV300_m34
 license=('LGPL3')
 url="http://www.openoffice.org"
 install=openoffice.install
@@ -116,7 +116,6 @@ build() {
 	--disable-minimizer\
 	--disable-odk\
 	--disable-pdfimport\
-	--disable-qadevooo\
 	--disable-reportdesign\
 	--disable-systray\
 	--disable-mathmldtd\
@@ -171,8 +170,6 @@ build() {
 
 #	--disable-qadevooo\ http://www.openoffice.org/issues/show_bug.cgi?id=91452
 #	--enable-evolution2\
-
-#	--disable-fontooo\	# seems removed
 
 	cd ..
 
@@ -263,11 +260,6 @@ build() {
 	chown root.root -R ${pkgdir}/
 	chmod +rX -R ${pkgdir}/usr
 
-	# link the mozilla-plugin
-	mkdir -p ${pkgdir}/usr/lib/mozilla/plugins/
-	cd ${pkgdir}/usr/lib/mozilla/plugins/
-	ln -v -s /opt/openoffice/program/libnpsoplugin.so . # should be fixed to reflect the devel path in the next release
-
 	## Develize it!
 	cd ${pkgdir}/opt/
 	mv openoffice openoffice-dev
@@ -287,14 +279,19 @@ build() {
 	
 	cd ${pkgdir}/usr/share/applications/
 	sed -i -e 's|Icon=|Icon=dev-|g' $startdir/pkg/usr/share/applications/*.desktop || return 1
-	sed -i -e 's|OpenOffice\.org\ 3\.0|OpenOffice\.org\ devel|g' ${pkgdir}/usr/share/applications/*.desktop || return 1
+	sed -i -e 's|OpenOffice\.org\ 3\.1|OpenOffice\.org\ devel|g' ${pkgdir}/usr/share/applications/*.desktop || return 1
 	sed -i -e 's|\/opt\/openoffice\-dev\/program\/soffice|\/usr\/bin\/soffice\-dev|g' ${pkgdir}/usr/share/applications/*.desktop || return 1
 
-	mv ${pkgdir}/usr/lib/mozilla/plugins/libnpsoplugin.so ${pkgdir}/usr/lib/mozilla/plugins/libnpsoplugin-dev.so
 	cd ${pkgdir}/opt/openoffice-dev/program/
 	ln -sf /opt/openoffice-dev/program/soffice.bin soffice-dev.bin
 	
        # set desktop variable to force gtk/gnome vcl usage
        install -m755 -d ${pkgdir}/etc/profile.d
        install -m755 ${srcdir}/openoffice.profile ${pkgdir}/etc/profile.d/openoffice-devel.sh || return 1
+
+	# link the mozilla-plugin
+	mkdir -p ${pkgdir}/usr/lib/mozilla/plugins/
+	cd ${pkgdir}/usr/lib/mozilla/plugins/
+	ln -v -s /opt/openoffice-dev/program/libnpsoplugin.so . # should be fixed to reflect the devel path in the next release
+	mv ${pkgdir}/usr/lib/mozilla/plugins/libnpsoplugin.so ${pkgdir}/usr/lib/mozilla/plugins/libnpsoplugin-dev.so
 }
